--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
     </script>
 </head>
 <body>
+ <div class="links">
+<a href=https://github.com/Ungaminga/TES-L-Localizated-Sounds/archive/4e72e300ddee610d827ffcd05d9981a176bb1da2.zip>Download ru_</a>
+<br><a href = https://github.com/Ungaminga/TES-L-Localizated-Sounds/archive/master.zip>Download all</a>
+</div>
 <ul>
-<li><input type="checkbox" id="dir0" checked = "checked" /> <label for="dir0"><span class="unchecked">&#10149;</span><span class="checked">&#8863; </span>en_cards_sound</label> <ul>
+    <li><input type="checkbox" id="dir0" checked = "checked" /> <label for="dir0"><span class="unchecked">&#10149;</span><span class="checked">&#8863; </span>en_cards_sound</label> <ul>
 <div class="big">
 <div>
 <li><input type="checkbox" id="dir1" checked = "checked" /> <label for="dir1"><span class="unchecked">&#10149;</span><span class="checked">&#8863; </span>abecean_navigator</label> <ul>
@@ -2611,7 +2615,7 @@
 <li class="file"><a id="wood_elf_male_b_thankyou.wav" onclick='play(this)' file="sounds/ru_portrait_shout/wood_elf/wood_elf_male_b_thankyou.wav"><span class="play">&#9658</span>wood_elf_male_b_thankyou.wav</a><a href="sounds/ru_portrait_shout/wood_elf/wood_elf_male_b_thankyou.wav" download>&#8659;</a></li>
 </ul></li>
 </ul></li>
-
 </ul>
+
 </body>
 </html>
